# flask-redis-ses-account-registration-confirmation

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
project/client/static/: main.css
project/client/templates/: _base.html  email.txt  form_macros.html  home.html
project/dashboard/: Dockerfile
project/db/: create.sql
project/server/: __init__.py  config.py
project/server/main/: tasks.py  utils.py  views.py
project/tests/: test_config.py  test_main.py  test_utils.py
